--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <img src="3.png" alt="Page 1">
     </div>
     <div class="page" id="page2">
-        <img src="3.png" alt="Page 2">
+        <img src="4.png" alt="Page 2">
+    </div>
+    <div class="page" id="page3">
+        <img src="3.png" alt="Page 3 (back side)">
     </div>
 </div>
 
